# Server

./: .gitignore  README.md
grpcManager/: go.mod  grpc_manager.pb.go  grpc_manager_grpc.pb.go  grpc_manager_service.go  manager.go
grpcManager/cmd/: main.go
grpcManager/proto/: grpc_manager.proto
key_manager/: Cargo.toml  README.md
key_manager/src/: lib.rs
key_manager/src/encryption/: mod.rs
manager/: .gitignore  README.md  auth_manager.go  database_handler.go  go.mod  grpc_manager.pb.go  grpc_manager_grpc.pb.go  grpc_manager_service.go  hosted_squad_db_manager.go  keys_test.go  manager.go  manager_test.go  peer_db_manager.go  squadHttpMiddleware.go  squadManager.go  squad_db_manager.go  websocket_server.go  ws_stat_middleware.go
manager/proto/: grpc_manager.proto
manager/redirect/: main.go
manager/router/: main.go
