[package]
name = "key_manager"
version = "0.1.0"
edition = "2018"
description = "handle message encryption and crypto key generation"
repository = "github.com/loisBn/keyManager"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.74"
rsa = { version = "0.4.0" }
getrandom = {version = "0.2.3", features = ["js"]}
rand = "0.8.4"
base64 = "0.13.0"